--- a/styles/main.css
+++ b/styles/main.css
@@ -244,7 +244,12 @@ body {
   background-attachment: fixed;
   color: #ffffff;
 }
-@media (hover: none) and (pointer: coarse), (max-width: 1024px) {
+@supports (-webkit-touch-callout: none) {
+  .hero {
+    background-attachment: scroll;
+  }
+}
+@media (max-width: 1024px) {
   .hero {
     background-attachment: scroll;
   }
